tests/NormalTests/paczka1/fuzzy1/92860408.err
Error in line 2: YX28 A215 65,3
Error in line 4: YX28 S587 60,3
Error in line 5: CO3XWxO55W S550 46,0
Error in line 8: j7Z9dC S550 3,6
Error in line 14: j7Z9dC A215 28,7
Error in line 18: j7Z9dC S587 72,5
Error in line 20: YX28 S587 97,55
Error in line 25: CO3XWxO55W S550 163,19
Error in line 22: YX28 S550 51,9
Error in line 19: j7Z9dC S48 71,7
Error in line 26: Sd0nE A215 30,8
Error in line 36: Sd0nE S48 90,8
